# musix

./: .gitignore  LICENSE  README.md  musix.cabal  stack.yaml
app/: Main.hs
src/: App.hs  AppState.hs  ChordMap.hs  Chords.hs  Config.hs  Graphics.hs  Keyboard.hs  Midi.hs  Music.hs  OldMusic.hs  UI.hs
