name:                musix
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stusherwin/musix#readme
license:             BSD3
license-file:        LICENSE
author:              Stu Sherwin
maintainer:          stu.sherwin@gmail.com
copyright:           2017 Stu Sherwin
category:            Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics, Music, Keyboard, Midi, ChordMap, UI
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , hmidi >= 0.2
                     , GLUT >= 2.7
                     , Yampa >= 0.10
  default-language:    Haskell2010

executable musix
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , musix
                     , containers >= 0.5
                     , GLUT >= 2.7
                     , Yampa >= 0.10
                     , hmidi >= 0.2
                     , time >= 1.9
  default-language:    Haskell2010

test-suite musix-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , musix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stusherwin/musix